fix(Header): fix menu alignment; fix Galery arrow were above the menu when scroll

--- a/src/components/Header/_styles.scss
+++ b/src/components/Header/_styles.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: flex-end;
   flex-direction: row;
-  z-index: 1;
+  z-index: 10;
 
   .header-app {
     max-height: var(--header-height);
@@ -32,22 +32,24 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
 
       .subtitle {
         margin-top: -20px;
         font-weight: lighter;
-        font-size: calc(6px + 2vmin)
+        font-size: calc(6px + 2vmin);
+      }
+
+      .header-menu {
+        display: flex;
+        flex: 1;
+        justify-content: flex-end;
+        align-items: flex-end;
+
+        .header-menu-item {
+          align-items: flex-end;
+        }
       }
     }
-  }
-
-  .header-menu {
-    display: flex;
-    flex: 2;
-    justify-content: flex-end;
-    align-items: flex-end;
   }
 }
 
