--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -89,7 +89,7 @@ p {
 
   // Widths
   --container-width: 950px;
-  --header-height: 25vh;
+  --header-height: 22vh;
   --header-font-size: calc(5px + 2vmin);
   --footer-height: 10vh;
   --nav-font-size: calc(5px + 2vmin);
